--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -2,22 +2,22 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_navigation"
+    android:id="@+id/navigation_main"
     app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/homeFragment"
-        android:label="HomeFragment"
+        android:label="@string/home"
         android:name="com.fatlytics.app.ui.main.home.HomeFragment"
         tools:layout="@layout/home_fragment" />
     <fragment
         android:id="@+id/diaryFragment"
-        android:label="UniversityFragment"
+        android:label="@string/diary"
         android:name="com.fatlytics.app.ui.main.diary.DiaryFragment"
         tools:layout="@layout/diary_fragment" />
     <fragment
         android:id="@+id/profileFragment"
-        android:label="FacultyFragment"
+        android:label="@string/profile"
         android:name="com.fatlytics.app.ui.main.profile.ProfileFragment"
         tools:layout="@layout/profile_fragment" />
 </navigation>
